# serializer version: 1
# name: test_comment_ok[comment_c_expr]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_c_leading]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_c_trailing]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sh_expr]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_sh_leading]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sh_trailing]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sql_expr]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_sql_leading]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sql_trailing]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
